Hero slider fixes. Hero slider functions better on mobile. Still need to fix issue with mobile navigation bar pushing slider out of the way.

--- a/scss/components/cards/_news-style-card.scss
+++ b/scss/components/cards/_news-style-card.scss
@@ -95,9 +95,10 @@
     padding: 0px 15px 0px;   
 }
 
-.event-highlight-card--read-more {
+.event-highlight-card--register {
     display: block;
     box-sizing: border-box;
+    min-width: 50%;
     padding: 8px 18px 10px;
     font-family: "Trade Gothic Next W01", Arial, sans-serif;
     font-weight: normal;
@@ -107,6 +108,23 @@
     background: #900;
     color: #fff !important;
     position: relative;
+    float: left;
+
+}
+.event-highlight-card--atc {
+    display: block;
+    min-width: 50%;
+    box-sizing: border-box;
+    padding: 8px 18px 10px;
+    font-family: "Trade Gothic Next W01", Arial, sans-serif;
+    font-weight: normal;
+    font-size: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    background: #333;
+    color: #fff !important;
+    position: relative;
+    float: right;
 
 }
 @media only screen and (max-width: 767px) {
